--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,9 @@ packages = [{include = "src"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 fastapi = "^0.115.0"
+uvicorn = "^0.30.1"
 sqlmodel = "^0.0.22"
+sqlalchemy = "^2.0.35"  # Added for Alembic compatibility
 supabase = "^2.9.1"
 python-dotenv = "^1.0.1"
 slowapi = "^0.1.9"
@@ -22,6 +24,7 @@ ruff = "^0.6.8"
 pylint = "^3.3.1"
 mypy = "^1.11.2"
 graphene = "^3.3.0"
+psycopg2-binary = "^2.9.9"
 
 [tool.ruff]
 line-length = 100
