--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,7 +15,7 @@ supabase = "^2.9.1"
 python-dotenv = "^1.0.1"
 slowapi = "^0.1.9"
 redis = "^5.0.8"
-pydantic = "^2.9.2"
+pydantic = {extras = ["email"], version = "^2.11.7"}
 alembic = "^1.13.3"
 pytest = "^8.3.3"
 pytest-asyncio = "^0.24.0"
@@ -25,6 +25,7 @@ pylint = "^3.3.1"
 mypy = "^1.11.2"
 graphene = "^3.3.0"
 psycopg2-binary = "^2.9.9"
+asyncpg = "^0.30.0"
 
 [tool.ruff]
 line-length = 100
