--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ python = "^3.10"
 fastapi = "^0.115.0"
 uvicorn = "^0.30.1"
 sqlmodel = "^0.0.22"
-sqlalchemy = "^2.0.35"  # Added for Alembic compatibility
+sqlalchemy = "^2.0.35"
 supabase = "^2.9.1"
 python-dotenv = "^1.0.1"
 slowapi = "^0.1.9"
