--- a/frontend-react/package.json
+++ b/frontend-react/package.json
@@ -12,12 +12,16 @@
   "dependencies": {
     "@heroui/react": "^2.7.11",
     "@hookform/resolvers": "^5.1.1",
+    "@types/leaflet": "^1.9.20",
+    "@types/react-leaflet": "^2.8.3",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.0",
+    "leaflet": "^1.9.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.6.3",
     "zod": "^3.25.75"
   },
